# wip-gui

./: Cargo.toml  README
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  scene.rs  tree.rs
crates/gui/src/view/: adapt.rs  memoize.rs  mod.rs
crates/gui_native/: Cargo.toml
crates/gui_native/src/: lib.rs  view.rs
crates/renderer/src/: lib.rs
crates/renderer_glow/: Cargo.toml
crates/renderer_glow/examples/: glutin.rs
crates/renderer_glow/src/: image.rs  lib.rs  quad.rs  renderer.rs  triangle.rs
crates/renderer_glow/src/shader/: image.frag  quad_es2.frag  quad_es2.vert  quad_es2_kg.frag  triangle.vert
crates/text/: Cargo.toml
crates/text/examples/: test.rs
crates/text/src/: font.rs
crates/widgets/src/: lib.rs
gui/src/: lib.rs  tree.rs
gui/src/view/: adapt.rs  memoize.rs  mod.rs
