[package]
name = "text"
version = "0.1.0"
edition = "2021"

[dependencies.swash]
version = "0.1.4"
default-features = false
features = [
    "scale",
    "render",
]

[dev-dependencies]
png = "0.17.6"
glutin = "0.30.0"
wgpu = "0.14.0"
winit = "0.27.5"
lyon = "1.0.1"
pollster = "0.2.5"
bytemuck = { version = "1.12.3", features = ["extern_crate_alloc", "extern_crate_std", "derive"]}
